crates/solidity/testing/snapshots/bindings_output/mappings/elementary/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:4:5]
    │
  4 │ ╭─▶     function get(address _addr) public view returns (uint256) {
    ┆ ┆   
 14 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Mapping {
   │          ───┬───  
   │             ╰───── def: 1
 2 │     mapping(address => uint256) public myMap;
   │                                        ──┬──  
   │                                          ╰──── def: 2
───╯
